
Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~
- Removed xp-net.xp_framework-{VERSION}.xar from boot classpath. It is
  no longer required for runners, that`s all in xp-tools-${VERSION}.xar
  To run unittests on a released version, use the following:
  unittest -cp {VERSION}/lib/xp-net.xp_framework-{VERSION}.xar [tests]
  (friebe)

Bugfixes
~~~~~~~~
- Fixed lang.Process thinking it would be able to execute directories 
  which would simply fail later on.
  (friebe)
- Fixed leftover of refactoring of peer.mail.MessagingAddress 
  interface in peer.mail.transport.SmtpTransport
  (gellweiler, reuter, kiesel)


Version 5.7.1, released 2009-01-23
----------------------------------
SVN version: 12768 

Heads up!
~~~~~~~~~
- Deprecated SOAP_ACTION_* global constants in 
  webservices.soap.transport.SOAPHTTPTransport class in favor of
  class constants in same class.
  (kiesel)

RFCs
~~~~
- Implemented RFC #0176 - Scriptlet URL handler classes
  (hinckel)

Bugfixes
~~~~~~~~
- Fixed net.xp_framework.unittest.bootstrap package to work with paths
  with spaces inside
  (friebe)
- Fixed peer.ftp.DefaultFtpListParser to return correct dates for entries
  listed with compact format ("Apr 4 20:16" instead of "Apr 4 2009")
  (friebe, hinckel)
- Fixed io.File's members filename, dirname and extension being set from
  original URI instead of resolved one
  (friebe)
- Fixed bug #30 - recursive class loading in static initializer 
  (friebe)
- Fixed error in rdbms.sybase.SybaseDialect, the cast SQL function had 
  flipped arguments.
  (wagner)
- Set default encoding in JsonMessage to UTF-8 since JsonEncoder/
  JsonDecoder always encodes stuff in UTF-8
  (hinckel)
- Fixed WebdavClient::put() method to explicitely pass a RequestData 
  object to HttpConnection's put() method
  (hinckel)

Features
~~~~~~~~
- Added support to unittest command to run all non-abstract TestCase